root-app/templates/media/sonarr/http-route.yml
kind:       HTTPRoute
apiVersion: gateway.networking.k8s.io/v1

metadata:
  name:      sonarr
  namespace: media

spec:
  parentRefs:
    - name:      traefik-gateway
      namespace: traefik        # traefik-gateway is in the traefik namespace

  hostnames:
    - "sonarr.localhost"

  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name:      sonarr
          port:      8989
          namespace: media
